# Project-Bootstrap-Harness

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.en.md  CONTRIBUTING.md  LICENSE  Makefile  README.en.md  README.md  ROADMAP-v1.0.md  SECURITY.md  pyproject.toml
.agent/: opencode_harness_engineering_guide.md
.agent/plans/: harness-init-upgrade-v2.json
.github/workflows/: ci.yml  publish.yml
docs/: design.md
docs/experiments/: summary.en.md  trae-solo-comparison.md
docs/plans/: 2026-04-20-quick-mode-design.md  2026-04-27-phase2-v1.5.0-implementation.md  v1.1源码审查与问题定位报告.md  v2.0-improvement-plan.md
docs/spec/: PBH-SPEC.md  PBH-SPEC.zh-CN.md
src/harness_init/: __init__.py  _git.py  _templates.py  _utils.py  cli.py  core.py
src/harness_init/templates/: AGENTS.md  AGENTS.quick.md  README.en.md  README.md  pyproject.toml
src/harness_init/templates/cli/: .cursorrules  AGENTS.quick.md  CLAUDE.md  pyproject.quick.toml
src/harness_init/templates/cli/src/{package_name}/: cli.quick.py
src/harness_init/templates/cli/tests/: test_cli.py
src/harness_init/templates/common/: README.en.md  README.md
src/harness_init/templates/common/.github/: copilot-instructions.md
src/harness_init/templates/common/.harness/: known_pitfalls.md
src/harness_init/templates/common/.trae/rules/: rules.md
src/harness_init/templates/common/docs/: PROJECT_MAP.md  context.md
src/harness_init/templates/common/docs/decisions/: ADR_TEMPLATE.md
src/harness_init/templates/docs/: context.md
src/harness_init/templates/src/{package_name}/: cli.py
src/harness_init/templates/src/{package_name}/harness/: runner.py  state.py
src/harness_init/templates/tests/: test_cli.quick.py
tests/: test_cli.py  test_core.py  test_core_git.py  test_core_validation.py  test_utils.py
