[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harness-init"
version = "0.1.0"
description = "CLI tool to initialize Harness Engineering projects"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
harness-init = "harness_init.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = ["src/harness_init/templates"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "google"
